--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -27,9 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -77,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -100,9 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -154,9 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -834,9 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -977,9 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1401,7 +1389,6 @@
    "cell_type": "code",
    "execution_count": 238,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -1419,9 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1524,9 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1561,9 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1762,9 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1778,10 +1757,12 @@
     }
    ],
    "source": [
-    "#Displaying Categorical attributes\n",
     "cols = df.columns\n",
+    "#fetching numerical columns\n",
     "num_cols = df._get_numeric_data().columns\n",
+    "#getting categorical columns\n",
     "Categorical_cols = list(set(cols) - set(num_cols))\n",
+    "#Displaying Categorical attributes\n",
     "Categorical_cols"
    ]
   },
@@ -1793,7 +1774,7 @@
    },
    "outputs": [],
    "source": [
-    "#Tranforming non-numerical columns to category\n",
+    "#Tranforming non-numerical columns to category in order to transform it afterwards\n",
     "for cols in Categorical_cols:\n",
     "    df[cols] = df[cols].astype('category')"
    ]
@@ -1801,9 +1782,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2085,7 +2064,7 @@
     }
    ],
    "source": [
-    "#transforming categorical values\n",
+    "#transforming categorical values thanks to cat.codes\n",
     "cat_columns = df.select_dtypes(include=['category']).columns\n",
     "df[cat_columns] = df[cat_columns].apply(lambda x: x.cat.codes)\n",
     "df.head(10)"
@@ -2094,9 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2386,7 +2363,7 @@
     }
    ],
    "source": [
-    "#Extracting redundant columns \n",
+    "#Extracting redundant columns based on the analysis explained in Output[209]\n",
     "Redudant_columns = ['Duration','Plan Duration','Ending Station Latitude','Ending Station Longitude','Starting Station Latitude','Starting Station Latitude']\n",
     "df_redundancy = df[Redudant_columns]\n",
     "df_redundancy.head(20)"
@@ -2395,9 +2372,7 @@
   {
    "cell_type": "code",
    "execution_count": 211,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2780,9 +2755,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2809,9 +2782,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2832,9 +2803,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2867,9 +2836,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2891,8 +2858,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__\\* Briefly explain your approach here \\*__\n",
-    "\n",
     "<u><b>Redundant columns:</b></u><br>\n",
     "1 - Duration column is the total second between start time and end time<br>\n",
     "2 - Plan duration is the number of days in the plan, it depends of the PassHolder Type\n",
@@ -2953,7 +2918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
