A3.3 keeping color the most used per set

--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
        "Name: set_id, Length: 221, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,9 +1568,20 @@
     "\n",
     "#grouping by set_ids and colors\n",
     "groupby_sets = inventory_color_filtered.groupby(['set_id','name']).set_id.count()\n",
-    "\n",
     "#Displaying dataframe\n",
     "groupby_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#keeping only the color the most used for each se\n",
+    "groupby_sets = inventory_color_filtered.groupby(['set_id','name']).set_id.count().reset_index(name=\"count\")\n",
+    "index = groupby_sets.groupby(['set_id'])['count'].transform(max) == groupby_sets['count']\n",
+    "groupby_sets[index]"
    ]
   },
   {
