--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "Name: year, dtype: object"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -166,7 +166,7 @@
        "       '19699'], dtype=object)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\antho\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -202,7 +213,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +227,7 @@
     "#sets['year'] = sets['year'].map(lambda x: x.lstrip('-'))\n",
     "sets.year = abs(sets.year)\n",
     "#sets.year[year > 10000] = sets.year[year > 10000].floordiv(10)\n",
-    "#sets[sets['year'].astype(str).str.len() == 5] = sets[sets['year'].astype(str).str.len() == 5]//10\n",
+    "sets.year[sets['year'].astype(str).str.len() == 5] = sets.year[sets['year'].astype(str).str.len() == 5]//10\n",
     "'''\n",
     "unionA = sets.loc[:,\"year\" ].copy() \n",
     "unionA[unionA > 0] = 0\n",
@@ -225,7 +236,7 @@
     "unionB[unionB < 0] = 0\n",
     "\n",
     "year = unionB + unionA\n",
-    "'''\n",
+    "\n",
     "u0 = year.copy()\n",
     "u1 = year.copy()\n",
     "u0[u0 < 10000] = 0\n",
@@ -235,7 +246,7 @@
     "c_year = u0 + u1 \n",
     "\n",
     "sets.year = c_year\n",
-    "\n",
+    "'''\n",
     "sets.year.unique()"
    ]
   },
