--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -224,9 +224,8 @@
     "sets.replace(to_replace='80s',value='1980',inplace=True)\n",
     "sets.year = sets.year.astype(int)\n",
     "#taking absolute value\n",
-    "#sets['year'] = sets['year'].map(lambda x: x.lstrip('-'))\n",
     "sets.year = abs(sets.year)\n",
-    "#sets.year[year > 10000] = sets.year[year > 10000].floordiv(10)\n",
+    "#fixing typing error for 5 digits numbers, example: 19555//10 = 1955\n",
     "sets.year[sets['year'].astype(str).str.len() == 5] = sets.year[sets['year'].astype(str).str.len() == 5]//10\n",
     "'''\n",
     "unionA = sets.loc[:,\"year\" ].copy() \n",
@@ -330,7 +329,8 @@
    "source": [
     "inventory_parts.quantity.mean() #display -inf\n",
     "#inventory_parts.quantity = inventory_parts.quantity.astype(int) # to integer , -inf is transformed into -2147483648\n",
-    "c_inventory_parts = inventory_parts[inventory_parts.quantity >= 0] #Cleaned inventory parts\n",
+    "#Cleaned inventory parts\n",
+    "c_inventory_parts = inventory_parts[inventory_parts.quantity >= 0] \n",
     "c_inventory_parts.quantity"
    ]
   },
@@ -385,7 +385,7 @@
     "\n",
     "<br><u>inventory_parts:</u> quantity<br>\n",
     "Quantity is supposed to be a natural number, we can't have a 0.5 piece of lego, this would be absurd. But here, quantity's type is float wich is non-sense as we said. \n",
-    "When there are no information we have -inf."
+    "When there is no information we have -inf."
    ]
   },
   {
