A3.4 adding new version explanation

--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -820,15 +820,15 @@
        "[212 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "#cars_part_id = parts.loc[parts['part_cat_id'] == 29].id\n",
-    "#cars_inventory_parts = inventory_parts.loc[inventory_parts['part_id'].isin(cars_part_id)].inventory_id\n",
+    "cars_part_id = parts.loc[parts['part_cat_id'] == 29].id\n",
+    "cars_inventory_parts = inventory_parts.loc[inventory_parts['part_id'].isin(cars_part_id)].inventory_id\n",
     "\n",
     "cars_inventory_sets = inventories.loc[inventories['id'].isin(cars_inventory_parts.index)]\n",
     "cars_inventory_sets\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1027,19 @@
     "In the part_categories we search for something that is only or mostly on car.\n",
     "We found the category Wheels and Tyres: id=29.\n",
     "Then look in the inventory_part for inventory_id with part = 29\n",
-    "In inventory_sets we count the number of set with inventory_id corresponding to 29\n"
+    "In inventory_sets we count the number of set with inventory_id corresponding to 29\n",
+    "\n",
+    "<br><br><br><br>\n",
+    "NEW VERSION:\n",
+    "<br><br>\n",
+    "<u><b><font color='green'>ANSWERS:</font></b></u><br><br>\n",
+    "\n",
+    "\n",
+    "<u>Lego car parts:</u><br>\n",
+    "In the part_categories we looked for something that is only or mostly on cars.\n",
+    "We found the category Wheels and Tyres: id=29.\n",
+    "Then, we selected in the inventory_part: inventory_id with part = 29\n",
+    "In inventory_sets, we count the number of sets with inventory_id = 29"
    ]
   },
   {
