half of B3.5 cleaned

--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -3530,7 +3530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we see most of the \"early\" (before noon)trips are taking by people with monthly pass doing one way route."
+    "As we see most of the \"early\" (before noon) trips are taken by people with monthly pass doing one way route. Number of trips for this group is considerebely higher than for any other. Additionally, number of round trips with Walk-up pass type (no pass) is surprisingly high compared to other groups that consider round trips as well. "
    ]
   },
   {
@@ -3543,30 +3543,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median of Trip Starting Hours: 14.966666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "bike_share_trip['Start Time'].dt.hour.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Seperate the hours of the day\n",
-    "start_time_hour = (bike_share_trip['Start Time'].dt.hour * 3600 + bike_share_trip['Start Time'].dt.minute * 60 + bike_share_trip['Start Time'].dt.second) / 3600.\n",
-    "median = start_time_hour.median()\n",
-    "print(median)"
+    "#Find Median For Start Hour of the trip\n",
+    "median = trip_starting_hour.median()\n",
+    "print(\"Median of Trip Starting Hours:\", median)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So median is 14.966, but since we want to have an integer we have to chose either 14 or 15. Let's calculate proportion for both of those cases"
+    "But since we are searching for an hour of the day we need to choose between 14 and 15, since they are two closest Integers to real median. Let's check proportion of splits in case of 14 and 15:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#methos identifies if trip started before median value or not\n",
+    "#input parameters: median, index (index of trip in dataframe)\n",
+    "#output parameters: 'First Interval' if trip started before median time, 'Second Interval' otherwise\n",
+    "#method uses trip_starting_hour series, that contains decimal hours for each row(trip) of the database\n",
+    "def before_median(median, index):\n",
+    "    if (trip_starting_hour[index] < median):\n",
+    "        return 'First Interval'\n",
+    "    return 'Second Interval'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#group data according to median = 14 and 15, count size of each group\n",
+    "first_median_split = bike_share_trip.groupby(lambda x: before_median(14, x)).size()\n",
+    "second_median_split = bike_share_trip.groupby(lambda x: before_median(15, x)).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median = 14, Split Proportion = 1.2838935550075021\n",
+      "Median = 15, Split Proportion = 0.9920724461091807\n"
+     ]
+    }
+   ],
+   "source": [
+    "#determine split proportion\n",
+    "print(\"Median = 14, Split Proportion =\", first_median_split['Second Interval']/first_median_split['First Interval'])\n",
+    "print(\"Median = 15, Split Proportion =\", second_median_split['Second Interval']/second_median_split['First Interval'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>Since proportion of split in case of Median = 15 is closer to one, we will consider 15 as our median and calculate \n",
+    "    proportion of trips by passholder type and trip route category for each interval </p>"
    ]
   },
   {
@@ -3578,13 +3631,6 @@
     "print(start_time_hour[start_time_hour.values <= 14].shape[0]/start_time_hour[start_time_hour.values > 14].shape[0])\n",
     "start_time_hour[start_time_hour.values <= 15].shape[0]/start_time_hour[start_time_hour.values > 15].shape[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
