--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -3585,7 +3585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3619,61 +3619,332 @@
    "metadata": {},
    "source": [
     "<p>Since proportion of split in case of Median = 15 is closer to one, we will consider 15 as our median and calculate \n",
-    "    proportion of trips by passholder type and trip route category for each interval </p>"
+    "    proportion of trips by passholder type and trip route category for each split. </p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                 Passholder Type  Trip Route Category\n",
+       "First Interval   Flex Pass        One Way                 4619\n",
+       "                                  Round Trip               268\n",
+       "                 Monthly Pass     One Way                39362\n",
+       "                                  Round Trip              2067\n",
+       "                 Staff Annual     One Way                  183\n",
+       "                                  Round Trip                59\n",
+       "                 Walk-up          One Way                15733\n",
+       "                                  Round Trip              4186\n",
+       "Second Interval  Flex Pass        One Way                 4415\n",
+       "                                  Round Trip               215\n",
+       "                 Monthly Pass     One Way                38170\n",
+       "                                  Round Trip              1705\n",
+       "                 Staff Annual     One Way                  116\n",
+       "                                  Round Trip                24\n",
+       "                 Walk-up          One Way                17044\n",
+       "                                  Round Trip              4261\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(start_time_hour[start_time_hour.values <= 14].shape[0]/start_time_hour[start_time_hour.values > 14].shape[0])\n",
-    "start_time_hour[start_time_hour.values <= 15].shape[0]/start_time_hour[start_time_hour.values > 15].shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#median = bike_share_trip['Start Time'].dt.hour.quantile(0.5)\n",
-    "print(median)\n",
-    "\n",
-    "median_cut = pd.qcut((bike_share_trip['Start Time'].dt.hour * 60.0 + bike_share_trip['Start Time'].dt.minute)/60, 2)\n",
-    "print(median_cut.head())\n",
-    "print(median_cut.value_counts())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groups = bike_share_trip.groupby([median_cut, 'Passholder Type', 'Trip Route Category']).size() \n",
-    "groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "groups_proportion = groups.groupby(level=0).apply(lambda x:\n",
-    "                                                 x / float(x.sum()))\n",
-    "#groups_proportion.set_index('Start Time')\n",
-    "groups_proportion"
+    "#group trips by interval of the day(before or after median), Passholder type and Route Category \n",
+    "#And determine number of trips for each group (16 in total)\n",
+    "trips_grouped_interval = bike_share_trip.groupby([lambda x: before_median(15, x), 'Passholder Type', 'Trip Route Category']).size() \n",
+    "trips_grouped_interval"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "start_time: The date/time when the trip began, presented in ISO 8601 format in local time\n",
-    "meaning that Date and time values are ordered from the largest to smallest unit of time, thus lexicographical order corresponds to the chronological order"
+    "<p>We grouped trip data according to the interval of the day(before or after median), Passholder Type and Trip Route Category.\n",
+    "Resulting Serie displays number of trips for each group</p>\n",
+    "<p> Now let's compute proportion of groups for each day interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                 Passholder Type  Trip Route Category\n",
+       "First Interval   Flex Pass        One Way                0.069483\n",
+       "                                  Round Trip             0.004031\n",
+       "                 Monthly Pass     One Way                0.592115\n",
+       "                                  Round Trip             0.031093\n",
+       "                 Staff Annual     One Way                0.002753\n",
+       "                                  Round Trip             0.000888\n",
+       "                 Walk-up          One Way                0.236668\n",
+       "                                  Round Trip             0.062969\n",
+       "Second Interval  Flex Pass        One Way                0.066945\n",
+       "                                  Round Trip             0.003260\n",
+       "                 Monthly Pass     One Way                0.578772\n",
+       "                                  Round Trip             0.025853\n",
+       "                 Staff Annual     One Way                0.001759\n",
+       "                                  Round Trip             0.000364\n",
+       "                 Walk-up          One Way                0.258438\n",
+       "                                  Round Trip             0.064610\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#determining proportion of trips grouped by passholder type and trip route category for each trip\n",
+    "trips_grouped_interval_proportion = trips_grouped_interval.groupby(level=0).apply(lambda x:\n",
+    "                                                 x / float(x.sum()))\n",
+    "#groups_proportion.set_index('Start Time')\n",
+    "trips_grouped_interval_proportion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>No we will convert the Serie into dataframe with unique, non-composite index</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  RangeIndex(start=0, stop=16, step=1) \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>Passholder Type</th>\n",
+       "      <th>Trip Route Category</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.069483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.004031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.592115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.031093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Staff Annual</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.002753</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          level_0 Passholder Type Trip Route Category         0\n",
+       "0  First Interval       Flex Pass             One Way  0.069483\n",
+       "1  First Interval       Flex Pass          Round Trip  0.004031\n",
+       "2  First Interval    Monthly Pass             One Way  0.592115\n",
+       "3  First Interval    Monthly Pass          Round Trip  0.031093\n",
+       "4  First Interval    Staff Annual             One Way  0.002753"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Convert Series into Data Frame\n",
+    "df_trips_grouped_interval_proportion = trips_grouped_interval_proportion.to_frame()\n",
+    "#Reset index\n",
+    "df_trips_grouped_interval_proportion.reset_index(inplace=True)\n",
+    "#print index of data frame\n",
+    "print(\"Index: \", df_trips_grouped_interval_proportion.index, '\\n')\n",
+    "#display first few rows of grouped trips\n",
+    "df_trips_grouped_interval_proportion.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we see, index is now non-composite. We just need to rename some of the attributes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Interval</th>\n",
+       "      <th>Passholder Type</th>\n",
+       "      <th>Trip Route Category</th>\n",
+       "      <th>Proportion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.069483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.004031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.592115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.031093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Staff Annual</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.002753</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Interval Passholder Type Trip Route Category  Proportion\n",
+       "0  First Interval       Flex Pass             One Way    0.069483\n",
+       "1  First Interval       Flex Pass          Round Trip    0.004031\n",
+       "2  First Interval    Monthly Pass             One Way    0.592115\n",
+       "3  First Interval    Monthly Pass          Round Trip    0.031093\n",
+       "4  First Interval    Staff Annual             One Way    0.002753"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#renaming attributes\n",
+    "df_trips_grouped_interval_proportion.rename(\n",
+    "    columns={'level_0': 'Interval', 0 : 'Proportion'}, inplace=True)\n",
+    "#displaying first few rows of grouped trips\n",
+    "df_trips_grouped_interval_proportion.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_trips_grouped_interval_proportion.index.is_unique"
    ]
   },
   {
@@ -3682,13 +3953,6 @@
    "source": [
     "__\\* Briefly explain your approach for every query here \\*__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
