--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -3835,7 +3835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -3901,20 +3901,108 @@
        "      <td>One Way</td>\n",
        "      <td>0.002753</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Staff Annual</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.000888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Walk-up</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.236668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>First Interval</td>\n",
+       "      <td>Walk-up</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.062969</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.066945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Flex Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.003260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.578772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Monthly Pass</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.025853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Staff Annual</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.001759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Staff Annual</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.000364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Walk-up</td>\n",
+       "      <td>One Way</td>\n",
+       "      <td>0.258438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Second Interval</td>\n",
+       "      <td>Walk-up</td>\n",
+       "      <td>Round Trip</td>\n",
+       "      <td>0.064610</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Interval Passholder Type Trip Route Category  Proportion\n",
-       "0  First Interval       Flex Pass             One Way    0.069483\n",
-       "1  First Interval       Flex Pass          Round Trip    0.004031\n",
-       "2  First Interval    Monthly Pass             One Way    0.592115\n",
-       "3  First Interval    Monthly Pass          Round Trip    0.031093\n",
-       "4  First Interval    Staff Annual             One Way    0.002753"
+       "           Interval Passholder Type Trip Route Category  Proportion\n",
+       "0    First Interval       Flex Pass             One Way    0.069483\n",
+       "1    First Interval       Flex Pass          Round Trip    0.004031\n",
+       "2    First Interval    Monthly Pass             One Way    0.592115\n",
+       "3    First Interval    Monthly Pass          Round Trip    0.031093\n",
+       "4    First Interval    Staff Annual             One Way    0.002753\n",
+       "5    First Interval    Staff Annual          Round Trip    0.000888\n",
+       "6    First Interval         Walk-up             One Way    0.236668\n",
+       "7    First Interval         Walk-up          Round Trip    0.062969\n",
+       "8   Second Interval       Flex Pass             One Way    0.066945\n",
+       "9   Second Interval       Flex Pass          Round Trip    0.003260\n",
+       "10  Second Interval    Monthly Pass             One Way    0.578772\n",
+       "11  Second Interval    Monthly Pass          Round Trip    0.025853\n",
+       "12  Second Interval    Staff Annual             One Way    0.001759\n",
+       "13  Second Interval    Staff Annual          Round Trip    0.000364\n",
+       "14  Second Interval         Walk-up             One Way    0.258438\n",
+       "15  Second Interval         Walk-up          Round Trip    0.064610"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3924,42 +4012,40 @@
     "df_trips_grouped_interval_proportion.rename(\n",
     "    columns={'level_0': 'Interval', 0 : 'Proportion'}, inplace=True)\n",
     "#displaying first few rows of grouped trips\n",
-    "df_trips_grouped_interval_proportion.head()"
+    "df_trips_grouped_interval_proportion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 220,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index is unique: True\n"
+     ]
     }
    ],
    "source": [
-    "df_trips_grouped_interval_proportion.index.is_unique"
+    "#check if index is unique\n",
+    "print(\"Index is unique:\", df_trips_grouped_interval_proportion.index.is_unique)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__\\* Briefly explain your approach for every query here \\*__"
+    "Does the proportion of trips depend on whether it is the first or second hour interval? Would the company have any significant benefit by creating a more complex paying scheme where monthly pass users would pay less in the first interval and (equally) more on the second one? Assume that the number of trips per interval will not change if the scheme changes."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Proportion of trips in most cases does not really depend on hour interval, there are slightly more one way trips with flex pass than in the first interval compared to the second interval for example. Most of the differences however are small, therefore it is very unlikely for company to see any significant benefit by creating a more complex paying scheme."
+   ]
   }
  ],
  "metadata": {
