--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -3795,14 +3795,28 @@
     }
    ],
    "source": [
-    "#assuming that cars have wheels and tyres id=29\n",
-    "cars_part_id = parts.loc[parts['part_cat_id'] == 29].id\n",
-    "cars_inventory_parts = inventory_parts.loc[inventory_parts['part_id'].isin(cars_part_id)].inventory_id\n",
     "\n",
-    "cars_inventory_sets = inventories.loc[inventories['id'].isin(cars_inventory_parts.index)]\n",
-    "cars_inventory_sets\n",
-    "#inventories\n",
-    "#sets.loc[sets['id'].isin(cars_inventory_sets.set_id)]"
+    "#Search for sub string\n",
+    "a = sets.name.str.contains(' CARS ', flags=re.IGNORECASE, regex=True) \n",
+    "b = sets.name.str.contains(' CAR ', flags=re.IGNORECASE, regex=True) \n",
+    "c = sets.name.str.contains('CAR ', flags=re.IGNORECASE, regex=True)\n",
+    "d = sets.name.str.contains('CARS ', flags=re.IGNORECASE, regex=True) \n",
+    "\n",
+    "#Get only sets with corresponding string in name\n",
+    "car_sets_a = sets[a.values]\n",
+    "car_sets_b = sets[b.values]\n",
+    "car_sets_c = sets[c.values]\n",
+    "car_sets_d = sets[d.values]\n",
+    "\n",
+    "\n",
+    "car  = car_sets_a.append(car_sets_b)\n",
+    "car = car.append(car_sets_c)\n",
+    "car = car.append(car_sets_d)\n",
+    "#We ignore sets  recurrency because they will be in the same inventory\n",
+    "\n",
+    "#locate inventories id\n",
+    "car_part = inventory_sets.loc[inventory_sets.set_id.isin(car.id)]\n",
+    "car_part"
    ]
   },
   {
